--- a/src/main/resources/application-security.properties
+++ b/src/main/resources/application-security.properties
@@ -1,4 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/security
 spring.datasource.username=root
 spring.datasource.password=5176
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
